miniC.output
Terminales no usados en la gramática

   "void"
   "print"
   "{"
   "}"


Estado 90 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: program $end

    1 $@1: %empty

    2 program: $@1 "program" "id" "(" ")" ";" functions declarations compound_statement "."

    3 functions: functions function ";"
    4          | %empty

    5 function: "function" "id" "(" "const" identifiers ":" type ")" ":" type declarations compound_statement

    6 declarations: declarations "var" identifiers ":" type ";"
    7             | declarations "const" constants ";"
    8             | %empty

    9 identifiers: "id"
   10            | identifiers "," "id"

   11 type: "integer"

   12 constants: "id" ":=" expression
   13          | constants "," "id" ":=" expression

   14 compound_statement: "begin" optional_statements "end"

   15 optional_statements: statements
   16                    | %empty

   17 statements: statement
   18           | statements ";" statement

   19 statement: "id" "=" expression
   20          | "if" expression "then" statement
   21          | "if" expression "then" statement "else" statement
   22          | "while" expression "do" statement
   23          | "for" "id" ":=" expression "to" expression "do" statement
   24          | "write" "(" print_list ")"
   25          | "read" "(" read_list ")"
   26          | compound_statement

   27 print_list: print_item
   28           | print_list "," print_item

   29 print_item: expression
   30           | "string"

   31 read_list: "id"
   32          | read_list "," "id"

   33 expression: expression "+" expression
   34           | expression "-" expression
   35           | expression "*" expression
   36           | expression "/" expression
   37           | "-" expression
   38           | "(" expression ")"
   39           | "id"
   40           | "num"
   41           | "id" "(" arguments ")"
   42           | "(" error ")"

   43 arguments: expressions
   44          | %empty

   45 expressions: expression
   46            | expressions "," expression


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 42
"id" (258) 2 5 9 10 12 13 19 23 31 32 39 41
"void" (259)
"const" (260) 5 7
"var" (261) 6
"," (262) 10 13 28 32 46
"if" (263) 20 21
"else" (264) 21
"while" (265) 22
"print" (266)
"read" (267) 25
"string" (268) 30
"num" (269) 40
"+" (270) 33
"-" (271) 34 37
"*" (272) 35
"/" (273) 36
"(" (274) 2 5 24 25 38 41 42
")" (275) 2 5 24 25 38 41 42
";" (276) 2 3 6 7 18
"=" (277) 19
"{" (278)
"}" (279)
UMINUS (280)
"program" (281) 2
"." (282) 2
"function" (283) 5
":" (284) 5 6
"integer" (285) 11
":=" (286) 12 13 23
"begin" (287) 14
"end" (288) 14
"then" (289) 20 21
"do" (290) 22 23
"for" (291) 23
"to" (292) 23
"write" (293) 24


No terminales con las reglas donde aparecen

$accept (39)
    en la izquierda: 0
program (40)
    en la izquierda: 2, en la derecha: 0
$@1 (41)
    en la izquierda: 1, en la derecha: 2
functions (42)
    en la izquierda: 3 4, en la derecha: 2 3
function (43)
    en la izquierda: 5, en la derecha: 3
declarations (44)
    en la izquierda: 6 7 8, en la derecha: 2 5 6 7
identifiers (45)
    en la izquierda: 9 10, en la derecha: 5 6 10
type (46)
    en la izquierda: 11, en la derecha: 5 6
constants (47)
    en la izquierda: 12 13, en la derecha: 7 13
compound_statement (48)
    en la izquierda: 14, en la derecha: 2 5 26
optional_statements (49)
    en la izquierda: 15 16, en la derecha: 14
statements (50)
    en la izquierda: 17 18, en la derecha: 15 18
statement (51)
    en la izquierda: 19 20 21 22 23 24 25 26, en la derecha: 17 18
    20 21 22 23
print_list (52)
    en la izquierda: 27 28, en la derecha: 24 28
print_item (53)
    en la izquierda: 29 30, en la derecha: 27 28
read_list (54)
    en la izquierda: 31 32, en la derecha: 25 32
expression (55)
    en la izquierda: 33 34 35 36 37 38 39 40 41 42, en la derecha:
    12 13 19 20 21 22 23 29 33 34 35 36 37 38 45 46
arguments (56)
    en la izquierda: 43 44, en la derecha: 41
expressions (57)
    en la izquierda: 45 46, en la derecha: 43 46


Estado 0

    0 $accept: . program $end

    $default  reduce usando la regla 1 ($@1)

    program  ir al estado 1
    $@1      ir al estado 2


Estado 1

    0 $accept: program . $end

    $end  desplazar e ir al estado 3


Estado 2

    2 program: $@1 . "program" "id" "(" ")" ";" functions declarations compound_statement "."

    "program"  desplazar e ir al estado 4


Estado 3

    0 $accept: program $end .

    $default  aceptar


Estado 4

    2 program: $@1 "program" . "id" "(" ")" ";" functions declarations compound_statement "."

    "id"  desplazar e ir al estado 5


Estado 5

    2 program: $@1 "program" "id" . "(" ")" ";" functions declarations compound_statement "."

    "("  desplazar e ir al estado 6


Estado 6

    2 program: $@1 "program" "id" "(" . ")" ";" functions declarations compound_statement "."

    ")"  desplazar e ir al estado 7


Estado 7

    2 program: $@1 "program" "id" "(" ")" . ";" functions declarations compound_statement "."

    ";"  desplazar e ir al estado 8


Estado 8

    2 program: $@1 "program" "id" "(" ")" ";" . functions declarations compound_statement "."

    $default  reduce usando la regla 4 (functions)

    functions  ir al estado 9


Estado 9

    2 program: $@1 "program" "id" "(" ")" ";" functions . declarations compound_statement "."
    3 functions: functions . function ";"

    "function"  desplazar e ir al estado 10

    $default  reduce usando la regla 8 (declarations)

    function      ir al estado 11
    declarations  ir al estado 12


Estado 10

    5 function: "function" . "id" "(" "const" identifiers ":" type ")" ":" type declarations compound_statement

    "id"  desplazar e ir al estado 13


Estado 11

    3 functions: functions function . ";"

    ";"  desplazar e ir al estado 14


Estado 12

    2 program: $@1 "program" "id" "(" ")" ";" functions declarations . compound_statement "."
    6 declarations: declarations . "var" identifiers ":" type ";"
    7             | declarations . "const" constants ";"

    "const"  desplazar e ir al estado 15
    "var"    desplazar e ir al estado 16
    "begin"  desplazar e ir al estado 17

    compound_statement  ir al estado 18


Estado 13

    5 function: "function" "id" . "(" "const" identifiers ":" type ")" ":" type declarations compound_statement

    "("  desplazar e ir al estado 19


Estado 14

    3 functions: functions function ";" .

    $default  reduce usando la regla 3 (functions)


Estado 15

    7 declarations: declarations "const" . constants ";"

    "id"  desplazar e ir al estado 20

    constants  ir al estado 21


Estado 16

    6 declarations: declarations "var" . identifiers ":" type ";"

    "id"  desplazar e ir al estado 22

    identifiers  ir al estado 23


Estado 17

   14 compound_statement: "begin" . optional_statements "end"

    "id"     desplazar e ir al estado 24
    "if"     desplazar e ir al estado 25
    "while"  desplazar e ir al estado 26
    "read"   desplazar e ir al estado 27
    "begin"  desplazar e ir al estado 17
    "for"    desplazar e ir al estado 28
    "write"  desplazar e ir al estado 29

    $default  reduce usando la regla 16 (optional_statements)

    compound_statement   ir al estado 30
    optional_statements  ir al estado 31
    statements           ir al estado 32
    statement            ir al estado 33


Estado 18

    2 program: $@1 "program" "id" "(" ")" ";" functions declarations compound_statement . "."

    "."  desplazar e ir al estado 34


Estado 19

    5 function: "function" "id" "(" . "const" identifiers ":" type ")" ":" type declarations compound_statement

    "const"  desplazar e ir al estado 35


Estado 20

   12 constants: "id" . ":=" expression

    ":="  desplazar e ir al estado 36


Estado 21

    7 declarations: declarations "const" constants . ";"
   13 constants: constants . "," "id" ":=" expression

    ","  desplazar e ir al estado 37
    ";"  desplazar e ir al estado 38


Estado 22

    9 identifiers: "id" .

    $default  reduce usando la regla 9 (identifiers)


Estado 23

    6 declarations: declarations "var" identifiers . ":" type ";"
   10 identifiers: identifiers . "," "id"

    ","  desplazar e ir al estado 39
    ":"  desplazar e ir al estado 40


Estado 24

   19 statement: "id" . "=" expression

    "="  desplazar e ir al estado 41


Estado 25

   20 statement: "if" . expression "then" statement
   21          | "if" . expression "then" statement "else" statement

    "id"   desplazar e ir al estado 42
    "num"  desplazar e ir al estado 43
    "-"    desplazar e ir al estado 44
    "("    desplazar e ir al estado 45

    expression  ir al estado 46


Estado 26

   22 statement: "while" . expression "do" statement

    "id"   desplazar e ir al estado 42
    "num"  desplazar e ir al estado 43
    "-"    desplazar e ir al estado 44
    "("    desplazar e ir al estado 45

    expression  ir al estado 47


Estado 27

   25 statement: "read" . "(" read_list ")"

    "("  desplazar e ir al estado 48


Estado 28

   23 statement: "for" . "id" ":=" expression "to" expression "do" statement

    "id"  desplazar e ir al estado 49


Estado 29

   24 statement: "write" . "(" print_list ")"

    "("  desplazar e ir al estado 50


Estado 30

   26 statement: compound_statement .

    $default  reduce usando la regla 26 (statement)


Estado 31

   14 compound_statement: "begin" optional_statements . "end"

    "end"  desplazar e ir al estado 51


Estado 32

   15 optional_statements: statements .
   18 statements: statements . ";" statement

    ";"  desplazar e ir al estado 52

    $default  reduce usando la regla 15 (optional_statements)


Estado 33

   17 statements: statement .

    $default  reduce usando la regla 17 (statements)


Estado 34

    2 program: $@1 "program" "id" "(" ")" ";" functions declarations compound_statement "." .

    $default  reduce usando la regla 2 (program)


Estado 35

    5 function: "function" "id" "(" "const" . identifiers ":" type ")" ":" type declarations compound_statement

    "id"  desplazar e ir al estado 22

    identifiers  ir al estado 53


Estado 36

   12 constants: "id" ":=" . expression

    "id"   desplazar e ir al estado 42
    "num"  desplazar e ir al estado 43
    "-"    desplazar e ir al estado 44
    "("    desplazar e ir al estado 45

    expression  ir al estado 54


Estado 37

   13 constants: constants "," . "id" ":=" expression

    "id"  desplazar e ir al estado 55


Estado 38

    7 declarations: declarations "const" constants ";" .

    $default  reduce usando la regla 7 (declarations)


Estado 39

   10 identifiers: identifiers "," . "id"

    "id"  desplazar e ir al estado 56


Estado 40

    6 declarations: declarations "var" identifiers ":" . type ";"

    "integer"  desplazar e ir al estado 57

    type  ir al estado 58


Estado 41

   19 statement: "id" "=" . expression

    "id"   desplazar e ir al estado 42
    "num"  desplazar e ir al estado 43
    "-"    desplazar e ir al estado 44
    "("    desplazar e ir al estado 45

    expression  ir al estado 59


Estado 42

   39 expression: "id" .
   41           | "id" . "(" arguments ")"

    "("  desplazar e ir al estado 60

    $default  reduce usando la regla 39 (expression)


Estado 43

   40 expression: "num" .

    $default  reduce usando la regla 40 (expression)


Estado 44

   37 expression: "-" . expression

    "id"   desplazar e ir al estado 42
    "num"  desplazar e ir al estado 43
    "-"    desplazar e ir al estado 44
    "("    desplazar e ir al estado 45

    expression  ir al estado 61


Estado 45

   38 expression: "(" . expression ")"
   42           | "(" . error ")"

    error  desplazar e ir al estado 62
    "id"   desplazar e ir al estado 42
    "num"  desplazar e ir al estado 43
    "-"    desplazar e ir al estado 44
    "("    desplazar e ir al estado 45

    expression  ir al estado 63


Estado 46

   20 statement: "if" expression . "then" statement
   21          | "if" expression . "then" statement "else" statement
   33 expression: expression . "+" expression
   34           | expression . "-" expression
   35           | expression . "*" expression
   36           | expression . "/" expression

    "+"     desplazar e ir al estado 64
    "-"     desplazar e ir al estado 65
    "*"     desplazar e ir al estado 66
    "/"     desplazar e ir al estado 67
    "then"  desplazar e ir al estado 68


Estado 47

   22 statement: "while" expression . "do" statement
   33 expression: expression . "+" expression
   34           | expression . "-" expression
   35           | expression . "*" expression
   36           | expression . "/" expression

    "+"   desplazar e ir al estado 64
    "-"   desplazar e ir al estado 65
    "*"   desplazar e ir al estado 66
    "/"   desplazar e ir al estado 67
    "do"  desplazar e ir al estado 69


Estado 48

   25 statement: "read" "(" . read_list ")"

    "id"  desplazar e ir al estado 70

    read_list  ir al estado 71


Estado 49

   23 statement: "for" "id" . ":=" expression "to" expression "do" statement

    ":="  desplazar e ir al estado 72


Estado 50

   24 statement: "write" "(" . print_list ")"

    "id"      desplazar e ir al estado 42
    "string"  desplazar e ir al estado 73
    "num"     desplazar e ir al estado 43
    "-"       desplazar e ir al estado 44
    "("       desplazar e ir al estado 45

    print_list  ir al estado 74
    print_item  ir al estado 75
    expression  ir al estado 76


Estado 51

   14 compound_statement: "begin" optional_statements "end" .

    $default  reduce usando la regla 14 (compound_statement)


Estado 52

   18 statements: statements ";" . statement

    "id"     desplazar e ir al estado 24
    "if"     desplazar e ir al estado 25
    "while"  desplazar e ir al estado 26
    "read"   desplazar e ir al estado 27
    "begin"  desplazar e ir al estado 17
    "for"    desplazar e ir al estado 28
    "write"  desplazar e ir al estado 29

    compound_statement  ir al estado 30
    statement           ir al estado 77


Estado 53

    5 function: "function" "id" "(" "const" identifiers . ":" type ")" ":" type declarations compound_statement
   10 identifiers: identifiers . "," "id"

    ","  desplazar e ir al estado 39
    ":"  desplazar e ir al estado 78


Estado 54

   12 constants: "id" ":=" expression .
   33 expression: expression . "+" expression
   34           | expression . "-" expression
   35           | expression . "*" expression
   36           | expression . "/" expression

    "+"  desplazar e ir al estado 64
    "-"  desplazar e ir al estado 65
    "*"  desplazar e ir al estado 66
    "/"  desplazar e ir al estado 67

    $default  reduce usando la regla 12 (constants)


Estado 55

   13 constants: constants "," "id" . ":=" expression

    ":="  desplazar e ir al estado 79


Estado 56

   10 identifiers: identifiers "," "id" .

    $default  reduce usando la regla 10 (identifiers)


Estado 57

   11 type: "integer" .

    $default  reduce usando la regla 11 (type)


Estado 58

    6 declarations: declarations "var" identifiers ":" type . ";"

    ";"  desplazar e ir al estado 80


Estado 59

   19 statement: "id" "=" expression .
   33 expression: expression . "+" expression
   34           | expression . "-" expression
   35           | expression . "*" expression
   36           | expression . "/" expression

    "+"  desplazar e ir al estado 64
    "-"  desplazar e ir al estado 65
    "*"  desplazar e ir al estado 66
    "/"  desplazar e ir al estado 67

    $default  reduce usando la regla 19 (statement)


Estado 60

   41 expression: "id" "(" . arguments ")"

    "id"   desplazar e ir al estado 42
    "num"  desplazar e ir al estado 43
    "-"    desplazar e ir al estado 44
    "("    desplazar e ir al estado 45

    $default  reduce usando la regla 44 (arguments)

    expression   ir al estado 81
    arguments    ir al estado 82
    expressions  ir al estado 83


Estado 61

   33 expression: expression . "+" expression
   34           | expression . "-" expression
   35           | expression . "*" expression
   36           | expression . "/" expression
   37           | "-" expression .

    $default  reduce usando la regla 37 (expression)


Estado 62

   42 expression: "(" error . ")"

    ")"  desplazar e ir al estado 84


Estado 63

   33 expression: expression . "+" expression
   34           | expression . "-" expression
   35           | expression . "*" expression
   36           | expression . "/" expression
   38           | "(" expression . ")"

    "+"  desplazar e ir al estado 64
    "-"  desplazar e ir al estado 65
    "*"  desplazar e ir al estado 66
    "/"  desplazar e ir al estado 67
    ")"  desplazar e ir al estado 85


Estado 64

   33 expression: expression "+" . expression

    "id"   desplazar e ir al estado 42
    "num"  desplazar e ir al estado 43
    "-"    desplazar e ir al estado 44
    "("    desplazar e ir al estado 45

    expression  ir al estado 86


Estado 65

   34 expression: expression "-" . expression

    "id"   desplazar e ir al estado 42
    "num"  desplazar e ir al estado 43
    "-"    desplazar e ir al estado 44
    "("    desplazar e ir al estado 45

    expression  ir al estado 87


Estado 66

   35 expression: expression "*" . expression

    "id"   desplazar e ir al estado 42
    "num"  desplazar e ir al estado 43
    "-"    desplazar e ir al estado 44
    "("    desplazar e ir al estado 45

    expression  ir al estado 88


Estado 67

   36 expression: expression "/" . expression

    "id"   desplazar e ir al estado 42
    "num"  desplazar e ir al estado 43
    "-"    desplazar e ir al estado 44
    "("    desplazar e ir al estado 45

    expression  ir al estado 89


Estado 68

   20 statement: "if" expression "then" . statement
   21          | "if" expression "then" . statement "else" statement

    "id"     desplazar e ir al estado 24
    "if"     desplazar e ir al estado 25
    "while"  desplazar e ir al estado 26
    "read"   desplazar e ir al estado 27
    "begin"  desplazar e ir al estado 17
    "for"    desplazar e ir al estado 28
    "write"  desplazar e ir al estado 29

    compound_statement  ir al estado 30
    statement           ir al estado 90


Estado 69

   22 statement: "while" expression "do" . statement

    "id"     desplazar e ir al estado 24
    "if"     desplazar e ir al estado 25
    "while"  desplazar e ir al estado 26
    "read"   desplazar e ir al estado 27
    "begin"  desplazar e ir al estado 17
    "for"    desplazar e ir al estado 28
    "write"  desplazar e ir al estado 29

    compound_statement  ir al estado 30
    statement           ir al estado 91


Estado 70

   31 read_list: "id" .

    $default  reduce usando la regla 31 (read_list)


Estado 71

   25 statement: "read" "(" read_list . ")"
   32 read_list: read_list . "," "id"

    ","  desplazar e ir al estado 92
    ")"  desplazar e ir al estado 93


Estado 72

   23 statement: "for" "id" ":=" . expression "to" expression "do" statement

    "id"   desplazar e ir al estado 42
    "num"  desplazar e ir al estado 43
    "-"    desplazar e ir al estado 44
    "("    desplazar e ir al estado 45

    expression  ir al estado 94


Estado 73

   30 print_item: "string" .

    $default  reduce usando la regla 30 (print_item)


Estado 74

   24 statement: "write" "(" print_list . ")"
   28 print_list: print_list . "," print_item

    ","  desplazar e ir al estado 95
    ")"  desplazar e ir al estado 96


Estado 75

   27 print_list: print_item .

    $default  reduce usando la regla 27 (print_list)


Estado 76

   29 print_item: expression .
   33 expression: expression . "+" expression
   34           | expression . "-" expression
   35           | expression . "*" expression
   36           | expression . "/" expression

    "+"  desplazar e ir al estado 64
    "-"  desplazar e ir al estado 65
    "*"  desplazar e ir al estado 66
    "/"  desplazar e ir al estado 67

    $default  reduce usando la regla 29 (print_item)


Estado 77

   18 statements: statements ";" statement .

    $default  reduce usando la regla 18 (statements)


Estado 78

    5 function: "function" "id" "(" "const" identifiers ":" . type ")" ":" type declarations compound_statement

    "integer"  desplazar e ir al estado 57

    type  ir al estado 97


Estado 79

   13 constants: constants "," "id" ":=" . expression

    "id"   desplazar e ir al estado 42
    "num"  desplazar e ir al estado 43
    "-"    desplazar e ir al estado 44
    "("    desplazar e ir al estado 45

    expression  ir al estado 98


Estado 80

    6 declarations: declarations "var" identifiers ":" type ";" .

    $default  reduce usando la regla 6 (declarations)


Estado 81

   33 expression: expression . "+" expression
   34           | expression . "-" expression
   35           | expression . "*" expression
   36           | expression . "/" expression
   45 expressions: expression .

    "+"  desplazar e ir al estado 64
    "-"  desplazar e ir al estado 65
    "*"  desplazar e ir al estado 66
    "/"  desplazar e ir al estado 67

    $default  reduce usando la regla 45 (expressions)


Estado 82

   41 expression: "id" "(" arguments . ")"

    ")"  desplazar e ir al estado 99


Estado 83

   43 arguments: expressions .
   46 expressions: expressions . "," expression

    ","  desplazar e ir al estado 100

    $default  reduce usando la regla 43 (arguments)


Estado 84

   42 expression: "(" error ")" .

    $default  reduce usando la regla 42 (expression)


Estado 85

   38 expression: "(" expression ")" .

    $default  reduce usando la regla 38 (expression)


Estado 86

   33 expression: expression . "+" expression
   33           | expression "+" expression .
   34           | expression . "-" expression
   35           | expression . "*" expression
   36           | expression . "/" expression

    "*"  desplazar e ir al estado 66
    "/"  desplazar e ir al estado 67

    $default  reduce usando la regla 33 (expression)


Estado 87

   33 expression: expression . "+" expression
   34           | expression . "-" expression
   34           | expression "-" expression .
   35           | expression . "*" expression
   36           | expression . "/" expression

    "*"  desplazar e ir al estado 66
    "/"  desplazar e ir al estado 67

    $default  reduce usando la regla 34 (expression)


Estado 88

   33 expression: expression . "+" expression
   34           | expression . "-" expression
   35           | expression . "*" expression
   35           | expression "*" expression .
   36           | expression . "/" expression

    $default  reduce usando la regla 35 (expression)


Estado 89

   33 expression: expression . "+" expression
   34           | expression . "-" expression
   35           | expression . "*" expression
   36           | expression . "/" expression
   36           | expression "/" expression .

    $default  reduce usando la regla 36 (expression)


Estado 90

   20 statement: "if" expression "then" statement .
   21          | "if" expression "then" statement . "else" statement

    "else"  desplazar e ir al estado 101

    "else"    [reduce usando la regla 20 (statement)]
    $default  reduce usando la regla 20 (statement)


Estado 91

   22 statement: "while" expression "do" statement .

    $default  reduce usando la regla 22 (statement)


Estado 92

   32 read_list: read_list "," . "id"

    "id"  desplazar e ir al estado 102


Estado 93

   25 statement: "read" "(" read_list ")" .

    $default  reduce usando la regla 25 (statement)


Estado 94

   23 statement: "for" "id" ":=" expression . "to" expression "do" statement
   33 expression: expression . "+" expression
   34           | expression . "-" expression
   35           | expression . "*" expression
   36           | expression . "/" expression

    "+"   desplazar e ir al estado 64
    "-"   desplazar e ir al estado 65
    "*"   desplazar e ir al estado 66
    "/"   desplazar e ir al estado 67
    "to"  desplazar e ir al estado 103


Estado 95

   28 print_list: print_list "," . print_item

    "id"      desplazar e ir al estado 42
    "string"  desplazar e ir al estado 73
    "num"     desplazar e ir al estado 43
    "-"       desplazar e ir al estado 44
    "("       desplazar e ir al estado 45

    print_item  ir al estado 104
    expression  ir al estado 76


Estado 96

   24 statement: "write" "(" print_list ")" .

    $default  reduce usando la regla 24 (statement)


Estado 97

    5 function: "function" "id" "(" "const" identifiers ":" type . ")" ":" type declarations compound_statement

    ")"  desplazar e ir al estado 105


Estado 98

   13 constants: constants "," "id" ":=" expression .
   33 expression: expression . "+" expression
   34           | expression . "-" expression
   35           | expression . "*" expression
   36           | expression . "/" expression

    "+"  desplazar e ir al estado 64
    "-"  desplazar e ir al estado 65
    "*"  desplazar e ir al estado 66
    "/"  desplazar e ir al estado 67

    $default  reduce usando la regla 13 (constants)


Estado 99

   41 expression: "id" "(" arguments ")" .

    $default  reduce usando la regla 41 (expression)


Estado 100

   46 expressions: expressions "," . expression

    "id"   desplazar e ir al estado 42
    "num"  desplazar e ir al estado 43
    "-"    desplazar e ir al estado 44
    "("    desplazar e ir al estado 45

    expression  ir al estado 106


Estado 101

   21 statement: "if" expression "then" statement "else" . statement

    "id"     desplazar e ir al estado 24
    "if"     desplazar e ir al estado 25
    "while"  desplazar e ir al estado 26
    "read"   desplazar e ir al estado 27
    "begin"  desplazar e ir al estado 17
    "for"    desplazar e ir al estado 28
    "write"  desplazar e ir al estado 29

    compound_statement  ir al estado 30
    statement           ir al estado 107


Estado 102

   32 read_list: read_list "," "id" .

    $default  reduce usando la regla 32 (read_list)


Estado 103

   23 statement: "for" "id" ":=" expression "to" . expression "do" statement

    "id"   desplazar e ir al estado 42
    "num"  desplazar e ir al estado 43
    "-"    desplazar e ir al estado 44
    "("    desplazar e ir al estado 45

    expression  ir al estado 108


Estado 104

   28 print_list: print_list "," print_item .

    $default  reduce usando la regla 28 (print_list)


Estado 105

    5 function: "function" "id" "(" "const" identifiers ":" type ")" . ":" type declarations compound_statement

    ":"  desplazar e ir al estado 109


Estado 106

   33 expression: expression . "+" expression
   34           | expression . "-" expression
   35           | expression . "*" expression
   36           | expression . "/" expression
   46 expressions: expressions "," expression .

    "+"  desplazar e ir al estado 64
    "-"  desplazar e ir al estado 65
    "*"  desplazar e ir al estado 66
    "/"  desplazar e ir al estado 67

    $default  reduce usando la regla 46 (expressions)


Estado 107

   21 statement: "if" expression "then" statement "else" statement .

    $default  reduce usando la regla 21 (statement)


Estado 108

   23 statement: "for" "id" ":=" expression "to" expression . "do" statement
   33 expression: expression . "+" expression
   34           | expression . "-" expression
   35           | expression . "*" expression
   36           | expression . "/" expression

    "+"   desplazar e ir al estado 64
    "-"   desplazar e ir al estado 65
    "*"   desplazar e ir al estado 66
    "/"   desplazar e ir al estado 67
    "do"  desplazar e ir al estado 110


Estado 109

    5 function: "function" "id" "(" "const" identifiers ":" type ")" ":" . type declarations compound_statement

    "integer"  desplazar e ir al estado 57

    type  ir al estado 111


Estado 110

   23 statement: "for" "id" ":=" expression "to" expression "do" . statement

    "id"     desplazar e ir al estado 24
    "if"     desplazar e ir al estado 25
    "while"  desplazar e ir al estado 26
    "read"   desplazar e ir al estado 27
    "begin"  desplazar e ir al estado 17
    "for"    desplazar e ir al estado 28
    "write"  desplazar e ir al estado 29

    compound_statement  ir al estado 30
    statement           ir al estado 112


Estado 111

    5 function: "function" "id" "(" "const" identifiers ":" type ")" ":" type . declarations compound_statement

    $default  reduce usando la regla 8 (declarations)

    declarations  ir al estado 113


Estado 112

   23 statement: "for" "id" ":=" expression "to" expression "do" statement .

    $default  reduce usando la regla 23 (statement)


Estado 113

    5 function: "function" "id" "(" "const" identifiers ":" type ")" ":" type declarations . compound_statement
    6 declarations: declarations . "var" identifiers ":" type ";"
    7             | declarations . "const" constants ";"

    "const"  desplazar e ir al estado 15
    "var"    desplazar e ir al estado 16
    "begin"  desplazar e ir al estado 17

    compound_statement  ir al estado 114


Estado 114

    5 function: "function" "id" "(" "const" identifiers ":" type ")" ":" type declarations compound_statement .

    $default  reduce usando la regla 5 (function)
